# matrix_library_jpo

./: .gitignore  CMakeLists.txt  README.md
include/: matrix.hpp  matrixSD.hpp  square.hpp  triangular.hpp
src/: main.cpp
